[package]
name = "task-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.23.0"
